--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,11 +1,12 @@
 <!-- start header -->
 <header class="main-header">
-				<!-- start logo -->
-				{{#if @blog.logo}}
-					<a class="branding" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}"></a>
-				{{else}}
-					<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
-				{{/if}}
+	<!-- start logo -->
+	<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
+	{{#if @blog.logo}}
+		<a class="branding" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}"></a>
+	{{else}}
+		<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
+	{{/if}}
 	<!-- start navigation -->
 	<nav class="main-navigation">
 		<div id="main-menu">
