--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -1,10 +1,13 @@
 <!-- start widget -->
 <div class="widget">
-	<h4 class="title">@HackersAndSlackers</h4>
 	<div class="content twitter">
+		<h4 class="title">@HackersAndSlackers</h4>
+	 <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78859/"></script> <!-- end feedwind code --> {{!--
+
+
 		<!-- start code from publish.twitter.com -->
 			<a class="twitter-timeline" data-chrome="noheader nofooter noscrollbar" data-tweet-limit="3" data-link-color="@theme-color" href="{{twitter_url}}?ref_src=twsrc%5Etfw">{{twitter}}</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		<!-- end code from publish.twitter.com -->
+		<!-- end code from publish.twitter.com -->--}}
 	</div>
 </div>
 <!-- end widget -->
