--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -15,7 +15,7 @@
 							<div class="featured-media" style="background-image: url({{feature_image}});">
 							</div>
 						{{/if}}
-						<div class="post-head">
+						<div class="page-head">
 							<h1 class="post-title">{{{title}}}</h1>
 						</div>
 						<div class="post-content">
