--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -273,8 +273,7 @@ pre {
 	}
 
 	.post-meta,
-	.post-title,
-	h5 {
+	.post-title {
 		text-align: left;
 		@media(max-width: 800px) {
 			display: none;
