--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -3,7 +3,7 @@
 ====================================================*/
 @theme-color: #26a2c7;        // theme color
 @secondary-color: #764ea2;				// secondary theme color
-@hover-color: #003e7c;
+@hover-color: #40cebb;
 @bg-color: #efefef;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
