--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,7 @@
 	{{#is "post"}}
 	<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
-	<meta property="og:image" content="https://miscellaneous.nyc3.digitaloceanspaces.com/hack.jpg"/>
+	<meta property="og:image" content="{{@blog.cover_image}}"/>
 	{{/is}}
 	<script src="{{asset "/js/jquery.min.js"}}"></script>
 	<!-- only for demo -->
