--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -805,6 +805,9 @@ pre {
 	.post-head {
 		border-bottom: 1px solid #eaeaea;
 	}
+	.post-content {
+    margin: 20px 10px;
+	}
 	@media(max-width: 800px) {
 		.featured-media {
 			width: 110%;
