--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -9,7 +9,7 @@
 						<a href="{{url}}"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
 					{{/unless}}
 					{{#if profile_image}}
-        		<a href="{{url}}"><img src="{{img_url profile_image}}" alt="Author image" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></a>
+        		<a href="{{url}}"><img src="{{img_url profile_image}}" alt="Author image" class="avi"></a>
 					{{/if}}
 					<a href="{{url}}" class="single-author-name">{{name}}</a>
 				</div>
