--- a/post.hbs
+++ b/post.hbs
@@ -20,9 +20,10 @@
 					<div class="post-head">
 						<h1 class="post-title">{{{title}}}</h1>
 						<h5>{{excerpt}}</h5>
-						<div class="post-meta">
-							<div class="date"><i class="fas fa-calendar"></i><span>{{date format="MMMM DD"}}</span></div>
-						</div>
+					</div>
+					<div class="post-meta">
+						<div class="date"><i class="fas fa-calendar"></i><span>{{date format="MMMM DD"}}</span></div>
+						<div class="author"><i class="fas fa-user"></i><span>{{#author}}{{name}}{{/author}}</span></div>
 					</div>
 
 					<div class="post-content">
