--- a/default.hbs
+++ b/default.hbs
@@ -7,7 +7,7 @@
 	{{! Page Meta }}
 	<title>{{meta_title}}</title>
 	<meta name="HandheldFriendly" content="True" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<!-- stylesheets -->
 	{{! Styles'n'Scripts }}
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
@@ -25,6 +25,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="{{asset "demo-assets/css/colpick.css"}}"> -->
 	{{! inserting theme config partial}}
 	{{> config}}
+	{{> analytics}}
 	{{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 
